force-app/main/default/objects/IntegrationService__mdt/IntegrationService__mdt.object-meta.xml
<CustomObject>
    <description>Information about a specific service related to an integration configuration.</description>
    <label>Integration Service</label>
    <pluralLabel>Integration Services</pluralLabel>
</CustomObject>