force-app/main/default/objects/IntegrationService__mdt/fields/IntegrationConfiguration__c.field-meta.xml
<CustomField>
    <fullName>IntegrationConfiguration__c</fullName>
    <label>Integration Configuration</label>
    <referenceTo>IntegrationConfiguration__mdt</referenceTo>
    <relationshipLabel>Integration Services</relationshipLabel>
    <relationshipName>Integration_Services</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>