force-app/main/default/objects/IntegrationService__mdt/fields/MockResponse__c.field-meta.xml
<CustomField>
    <fullName>MockResponse__c</fullName>
    <description>The Mock response returned by the service.</description>
    <label>Mock Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>