force-app/main/default/objects/IntegrationService__mdt/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>The path for the integration service. Used together with the base path for the related integration configuration.</description>
    <inlineHelpText>The path for the integration service.</inlineHelpText>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>